--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.5.0",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/elements": "1.3.3",
@@ -21,8 +22,10 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.2",
     "async-storage": "^0.1.0",
     "axios": "^1.5.0",
+    "deprecated-react-native-prop-types": "^4.2.1",
     "expo": "^49.0.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -41,7 +44,7 @@
     "react-native-tab-view": "^3.0.0",
     "react-native-web": "~0.19.6",
     "react-navigation-stack": "^2.10.4",
-    "typescript": "^5.1.3"
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -57,7 +60,7 @@
     "metro-config": "^0.79.0"
   },
   "private": true,
-   "eslintConfig": {
+  "eslintConfig": {
     "parser": "@babel/eslint-parser",
     "extends": [
       "standard",
