--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@react-navigation/elements": "1.3.3",
     "@react-navigation/material-bottom-tabs": "6.2.1",
     "@react-navigation/material-top-tabs": "6.2.1",
-    "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@types/react": "~18.2.14",
@@ -44,6 +43,7 @@
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.0.0",
     "react-native-web": "~0.19.6",
+    "react-navigation-backhandler": "^2.0.2",
     "react-navigation-stack": "^2.10.4",
     "typescript": "^5.2.2"
   },
