--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.5.0",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/elements": "1.3.3",
@@ -39,10 +39,12 @@
     "react-native-paper": "^5.10.4",
     "react-native-reanimated": "~3.3.0",
     "react-native-restart": "^0.0.27",
-    "react-native-safe-area-context": "^4.7.2",
+    "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.0.0",
+    "react-native-video": "^5.2.1",
     "react-native-web": "~0.19.6",
+    "react-native-webview": "^13.6.0",
     "react-navigation-backhandler": "^2.0.2",
     "react-navigation-stack": "^2.10.4",
     "typescript": "^5.2.2"
