Rodrigo el sexy4

--- a/eas.json
+++ b/eas.json
@@ -8,6 +8,8 @@
       "distribution": "internal"
     },
     "preview": {
+      "android": {
+      },
       "distribution": "internal"
     },
     "production": {}
