--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "consumehidalgo",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start -- --port 8090",
@@ -24,11 +24,12 @@
     "async-storage": "^0.1.0",
     "axios": "^1.5.0",
     "deprecated-react-native-prop-types": "^4.2.1",
+    "eas-cli": "^5.4.0",
     "expo": "^49.0.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.6",
     "react-native-async-storage": "^0.0.1",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.12.0",
