:sparkles: intentando arreglar estadisticas

--- a/eas.json
+++ b/eas.json
@@ -9,6 +9,8 @@
     },
     "preview": {
       "android": { 
+        "buildType": "apk"
+        
       },
       "distribution": "internal"
     },
