--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "async-storage": "^0.1.0",
     "axios": "^1.5.0",
     "deprecated-react-native-prop-types": "^4.2.1",
+    "eas-cli": "^5.9.1",
     "expo": "^49.0.0",
     "expo-status-bar": "~1.6.0",
+    "metro": "^0.80.1",
+    "metro-cache": "^0.80.1",
+    "metro-core": "^0.80.1",
+    "metro-resolver": "^0.80.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
