--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "2.4.10",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/elements": "1.3.3",
@@ -20,42 +20,42 @@
     "@react-navigation/material-top-tabs": "6.2.1",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
-    "@types/react": "~18.2.14",
+    "@types/react": "~18.2.45",
     "async-storage": "^0.1.0",
     "axios": "^1.5.0",
     "deprecated-react-native-prop-types": "^4.2.1",
-    "eas-cli": "^5.9.1",
-    "expo": "^49.0.0",
-    "expo-status-bar": "~1.6.0",
+    "eas-cli": "^0.49.0",
+    "expo": "^50.0.0",
+    "expo-status-bar": "~1.11.1",
     "metro": "^0.80.1",
     "metro-cache": "^0.80.1",
     "metro-core": "^0.80.1",
     "metro-resolver": "^0.80.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.2",
     "react-native-async-storage": "^0.0.1",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-modal": "^13.0.1",
-    "react-native-pager-view": "6.2.0",
+    "react-native-pager-view": "6.2.3",
     "react-native-pages": "^0.9.0",
     "react-native-paper": "^5.10.4",
-    "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated": "~3.6.2",
     "react-native-restart": "^0.0.27",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "react-native-tab-view": "^3.0.0",
     "react-native-video": "^5.2.1",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "^13.2.2",
+    "react-native-webview": "13.6.4",
     "react-navigation-backhandler": "^2.0.2",
     "react-navigation-stack": "^2.10.4",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@expo/webpack-config": "^19.0.0",
+    "@expo/webpack-config": "~19.0.1",
     "babel-eslint": "^10.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-jsx": "^11.0.0",
